# dico

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  DISTFILES  GNUmakefile  Makefile.am  NEWS  README  README-alpha  README-hacking  THANKS  TODO  bootstrap  bootstrap.conf  configure.ac  configure.boot  gnulib.modules  gnulibinit.conf  modinc  stub.ac
am/: gsasl.m4  guile.m4  lib.m4  testdir.m4
app/python/: .gitignore  README  dicod.conf.in  mediawiki.py  mediawiki2.py  requirements.txt
client/: .gitignore  Gjdict.ad  Makefile.am  bushu.code.c  bushusearch.c  client.c  client.h  cmdline.opt  convert.c  cornersearch.c  cystack.c  cystack.h  getfile.c  gjdict.help  help.c  help.h  helpfile.c  init.c  kanasearch.c  license.c  main.c  mini-gjdict.xpm  options.h  resource.sed  search.c  search.h  skipsearch.c  tmac.gjdict  util.c  widgets.c  xref.c
dico/: .gitignore  Makefile.am  autologin.c  cmdline.opt  connect.c  dico-priv.h  dico.c  func.c  lookup.c  main.c  netrc.c  pager.c  saslauth.c  shell.c
dicod/: .gitignore  Makefile.am  accesslog.c  acl.c  alias.c  auth.c  capa.c  ckpass.c  cmdline.opt  commands.c  config-format.c  config-gram.y  config-lex.l  database.c  dbtext.c  dicod.c  dicod.h  fdio.c  gsasl.c  ident.c  lang.c  lev.c  lint.c  loader.c  logstr.c  main.c  markup.c  mime.c  ostream.c  pp-setup  pp.c  regex.c  result.c  server.c  stat.c  stratcl.c  udb.c  virtual.c  xidle.c  xscript.c  (+1 more)
dicod/tests/: .gitignore  Makefile.am  alias.at  apop.at  apopauth.c  atlocal.in  def.at  descr.at  echo.c  help00.at  help01.at  help02.at  help03.at  info.at  match.at  nodef.at  nomatch.at  showdb.at  showstrat.at  startup.at  testsuite.at  virt01.at  virt02.at  virt03.at  virt04.at  vis00.at  vis01.at  vis02.at
dicoweb/: INSTALL  dicoweb.wsgi  dummy_translations.py  manage.py  requirements.txt  settings-sample.py  settings.py  urls.py  views.py  wsgi.py  wsgi.virtualenv.py
dicoweb/dicoclient/: __init__.py  dicoclient.py  dicoshell.py  setup.py
dicoweb/static/: dicoweb.css  dicoweb.js  opensearch.xml
dicoweb/templates/: base.html  index.html  opensearch.xml
dicoweb/templatetags/: dictlookup.py  media.py
dictd/: .gitignore  Makefile.am  accesslog.c  acl.c  alias.c  auth.c  capa.c  cmdline.opt  commands.c  config-format.c  config-gram.y  config-lex.l  dbtext.c  dictd.c  dictd.h  fdio.c  ident.c  lev.c  linebuf.c  loader.c  logstr.c  main.c  mime.c  ostream.c  pp-setup  pp.c  regex.c  server.c  stat.c  stream.c  udb.c  xscript.c
doc/: .gitignore  Config  Makefile.am  check-docs.sh  dico.1  dico.texi  dicod.8in  dicod.conf.5in  fdl.texi  gendocs.sh  gendocs_template  gjdict.texi  html.init  libdico.texi  macros.texi  proto.texi  rfc2229.txt  strat.texi  strftime.texi
examples/: Makefile.am  devdict.out  glossary.scm  listdict.scm  numerals-cz.txt  numerals-pl.ldb  textdict.py
fonts/: .gitignore  1.xbm  100.xbm  101.xbm  102.xbm  103.xbm  104.xbm  105.xbm  106.xbm  107.xbm  108.xbm  109.xbm  11.xbm  110.xbm  111.xbm  112.xbm  113.xbm  114.xbm  115.xbm  116.xbm  117.xbm  118.xbm  119.xbm  12.xbm  120.xbm  121.xbm  122.xbm  123.xbm  124.xbm  125.xbm  126.xbm  127.xbm  128.xbm  129.xbm  13.xbm  130.xbm  131.xbm  132.xbm  133.xbm  134.xbm  (+208 more)
include/: .gitignore  Makefile.am  Xaw.h  appi18n.h  dico.h  dict.h  gjdict.h  gjdict.xbm  gjdictd.h  gsaslstr.h  libi18n.h  testsuite.inc  xdico.h
include/dico/: Makefile.am  argcv.h  assoc.h  diag.h  filter.h  lbuf.h  list.h  markup.h  parseopt.h  strat.h  stream.h  tokenize.h  types.h  udb.h  url.h  utf8.h  util.h  xlat.h
lib/: Makefile.am  appi18n.c  argcv.c  assoc.c  base64.c  bsearch.c  crlfstr.c  dbgstream.c  diag.c  fdiostr.c  fdstream.c  fltstream.c  gsaslstr.c  header.c  iostr.c  iputil.c  jiscvt.c  key.c  levenshtein.c  libi18n.c  linebuf.c  linetrimstr.c  list.c  logstream.c  mapstream.c  markup.c  mergesort.c  parseopt.c  qp.c  soundex.c  strat.c  stream.c  timer.c  tokenize.c  udb.c  url.c  userprivs.c  utf8.c  utf8_is_alnum.c  utf8_is_space.c  (+9 more)
lib/tests/: .gitignore  Makefile.am  atlocal.in  crlf00.at  crlf01.at  crlf02.at  crlf03.at  crlf04.at  crlf05.at  crlftool.c  dlev00.at  dlev01.at  itrsh.c  itrsh.h  lev00.at  lev01.at  levtest.c  linetrim.c  list.at  listop.c  lntrim00.at  lntrim01.at  lntrim02.at  lntrim03.at  soundex.at  soundex.c  strcasecmp.at  strlen.at  strncasecmp.at  testsuite.at  tolower.at  toupper.at  utf8.c  wcstrcasecmp.at  wcstrchr.at  wcstrcmp.at  wcstrncasecmp.at  wcstrncmp.at  wcstrstr.at
maint/: bootstrap.mk  gnulib.modules  printflike
makedict/: .gitignore  Makefile.am  compile.c  index.c  main.c  makedict.h  makedict.opt  romaji.c  utils.c
modules/: Makefile.am  sample.c  sample.scm  stub.am  template.am  template.c  template.py  template.scm
modules/dict.org/: Makefile.am  (+6 more)
modules/gcide/: .gitignore  Makefile.am  degcide.c  ent.c  gcide.c  gcide.h  greek.c  grk.c  idx.c  idxgcide-cli.opt  idxgcide.l  markup.l  webchr.c
modules/gcide/tests/: .gitignore  Makefile.am  all.at  atlocal.in  autoidx.at  def00.at  def01.at  def02.at  def03.at  def04.at  def05.at  def06.at  define.at  degcide.c  descr.at  dicod.cfin  exact.at  exgrk.c  greek.at  greek.c  idx.at  info.at  markup.at  nopr.at  prefix.at  testsuite.at
modules/guile/: .gitignore  Makefile.am  guile.c  module.ac
modules/guile/tests/: Makefile.am  atlocal.in  define.at  dicod.cfin  exact.at  lev.at  mime.at  mime2.at  prefix.at  showdb.at  showinfo.at  showlang.at  suffix.at  testsuite.at
po/: .gitignore  POTFILES.in
scripts/: Makefile.am  gcider
server/: .gitignore  Makefile.am  bushu.code.c  cmdline.opt  dict.c  gram.y  log.c  main.c  search.c  server.c  server.h  utils.c
tests/: .gitignore  Makefile.am  devils.out  dicod.cfin  dictd.cfin  example.db  example.py  example.scm  example.text  glossary.scm  levtest.c
utils/: .gitignore  Makefile.am  bdfextract.pl  bushu.awk  getopt.m4  gud-wrapper  helpcmp.pl  mkbushufont.awk  revbits.c
xdico/: .gitignore  Makefile.am  appi18n.c  gsaslstr.c  iputil.c  timer.c  userprivs.c  xalloc-die.c  xhostname.c  xscript.c  xstream.c  xtkn.c  xutil.c
xdico/gnu/: Makefile.am
(+143 files in other folders)
